--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav>
         <h1>Start<span style="text-decoration: underline;">up</span></h1>
         <div>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Login</a>
+            <a href="home.html">Home</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="contactus.html">Contact Us</a>
+            <a href="login.html">Login</a>
         </div>
     </nav>
     <!-- Section About us-->
